初步完成了前景图片的裁剪功能，但是长宽比是固定值

--- a/app/src/main/res/menu/nav_menu.xml
+++ b/app/src/main/res/menu/nav_menu.xml
@@ -1,11 +1,14 @@
 <?xml version="1.0" encoding="utf-8"?>
 <menu xmlns:android="http://schemas.android.com/apk/res/android">
     <group android:checkableBehavior="single"
-        android:id="@+id/g1">
+        android:id="@+id/g0">
         <item
             android:id="@+id/backgroundpicture"
             android:icon="@drawable/background_picture"
             android:title="背景图片" />
+    </group>
+    <group android:checkableBehavior="single"
+        android:id="@+id/g1">
         <item
             android:id="@+id/foregroundpicture"
             android:icon="@drawable/foreground_picture"
