--- a/app/src/main/res/layout/activity_back_ground.xml
+++ b/app/src/main/res/layout/activity_back_ground.xml
@@ -32,15 +32,15 @@
             android:onClick="popupmenu"
             android:layout_weight="1"/>
     </LinearLayout>
-    <ListView
+    <!--<ListView
         android:id="@+id/listView"
         android:layout_width="match_parent"
         android:layout_height="0dp"
-        android:layout_weight="1" />
+        android:layout_weight="1" />-->
 
-    <!--<ImageView
-        android:id="@+id/picture"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_gravity="center_horizontal"/>-->
+    <android.support.v7.widget.RecyclerView
+        android:id="@+id/recycler_view"
+        android:layout_width="match_parent"
+        android:layout_height="match_parent" />
+
 </LinearLayout>
