--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -24,8 +24,9 @@
                 android:popupTheme="@style/ThemeOverlay.AppCompat.Light"/>
             <RelativeLayout
                 android:id="@+id/viewGroup"
-                android:layout_width="match_parent"
-                android:layout_height="wrap_content">
+                android:layout_width="wrap_content"
+                android:layout_height="match_parent"
+                android:orientation="vertical">
                 <ImageView
                     android:id="@+id/back_picture"
                     android:layout_width="match_parent"
