完成空画布检测，实现手绘图片接收并采用瀑布流布局显示出来

--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -33,7 +33,7 @@
                     android:layout_height="match_parent"
                     android:layout_gravity="center_horizontal"
                     android:layout_alignParentTop="true"
-                    android:src="@drawable/nav_icon"/>
+                    android:src="@drawable/init"/>
                 <ImageView
                     android:id="@+id/fore_picture"
                     android:layout_width="wrap_content"
