--- a/app/src/main/res/menu/popupmenu.xml
+++ b/app/src/main/res/menu/popupmenu.xml
@@ -6,4 +6,7 @@
     <item
         android:id="@+id/takephotos"
         android:title="打开照相机"/>
+    <item
+        android:id="@+id/drawphoto"
+        android:title="手绘图形"/>
 </menu>
