--- a/app/src/main/res/layout/activity_fore_ground.xml
+++ b/app/src/main/res/layout/activity_fore_ground.xml
@@ -37,8 +37,7 @@
         android:id="@+id/picture1"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_gravity="center_horizontal"
-        android:visibility="gone"/>
+        android:layout_gravity="center_horizontal" />
 
     <android.support.v7.widget.RecyclerView
         android:id="@+id/recycler_view1"
