--- a/app/src/main/res/layout/activity_back_ground.xml
+++ b/app/src/main/res/layout/activity_back_ground.xml
@@ -37,10 +37,26 @@
         android:layout_width="match_parent"
         android:layout_height="0dp"
         android:layout_weight="1" />-->
+    <RelativeLayout
+        android:layout_width="match_parent"
+        android:layout_height="match_parent">
+        <ImageView
+            android:id="@+id/back_iamge"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_gravity="center_horizontal"/>
+
+        <com.example.hebo.picturetest.PhotoCropView
+            android:id="@+id/test"
+            android:layout_width="match_parent"
+            android:layout_height="match_parent" />
+    </RelativeLayout>
+
 
     <android.support.v7.widget.RecyclerView
         android:id="@+id/recycler_view"
         android:layout_width="match_parent"
-        android:layout_height="match_parent" />
+        android:layout_height="match_parent"
+        android:visibility="gone"/>
 
 </LinearLayout>
