--- a/app/src/main/res/layout/activity_fore_ground.xml
+++ b/app/src/main/res/layout/activity_fore_ground.xml
@@ -40,7 +40,7 @@
             android:id="@+id/picture1"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:layout_gravity="center_horizontal" />
+            android:layout_centerInParent="true"/>
         <com.example.hebo.picturetest.PhotoCropView
             android:id="@+id/crop"
             android:layout_width="match_parent"
