添加对话框，修补一些小bug

--- a/app/src/main/res/menu/toolbar.xml
+++ b/app/src/main/res/menu/toolbar.xml
@@ -7,9 +7,9 @@
         android:title="Delete"
         app:showAsAction="always"/>
     <item
-        android:id="@+id/save"
-        android:icon="@drawable/save"
-        android:title="Settings"
+        android:id="@+id/mix"
+        android:icon="@drawable/mix"
+        android:title="Mix"
         app:showAsAction="always"/>
 
 </menu>
