--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -24,15 +24,13 @@
                 android:popupTheme="@style/ThemeOverlay.AppCompat.Light"/>
             <RelativeLayout
                 android:id="@+id/viewGroup"
-                android:layout_width="wrap_content"
-                android:layout_height="match_parent"
-                android:orientation="vertical">
+                android:layout_width="match_parent"
+                android:layout_height="1100px">
                 <ImageView
                     android:id="@+id/back_picture"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
-                    android:layout_gravity="center_horizontal"
-                    android:layout_alignParentTop="true"
+                    android:layout_centerInParent="true"
                     android:src="@drawable/init"/>
                 <ImageView
                     android:id="@+id/fore_picture"
