修补了背景界面搜索图片显示并发送到主界面的bug

--- a/app/src/main/res/layout/activity_back_ground.xml
+++ b/app/src/main/res/layout/activity_back_ground.xml
@@ -37,7 +37,7 @@
         android:layout_width="match_parent"
         android:layout_height="0dp"
         android:layout_weight="1" />-->
-    <RelativeLayout
+    <!--<RelativeLayout
         android:layout_width="match_parent"
         android:layout_height="match_parent">
         <ImageView
@@ -52,13 +52,12 @@
             android:layout_width="match_parent"
             android:layout_height="match_parent"
             android:visibility="gone"/>
-    </RelativeLayout>
+    </RelativeLayout>-->
 
 
     <android.support.v7.widget.RecyclerView
         android:id="@+id/recycler_view"
         android:layout_width="match_parent"
-        android:layout_height="match_parent"
-        android:visibility="gone"/>
+        android:layout_height="match_parent" />
 
 </LinearLayout>
